# rust-typescript-workspace

./: .eslintrc.cjs  .gitignore  Cargo.toml  README.md  config.json  package.json  pnpm-workspace.yaml  tailwind.config.ts
api/: Cargo.toml
api/src/: main.rs
api/src/routes/: mod.rs  proxy.rs
app/: index.html  package.json  tsconfig.json  vite.config.ts
app/backend/: .taurignore  Cargo.toml  tauri.conf.json
app/backend/src/: commands.rs  main.rs
app/src/: commands.ts  main.tsx  styles.css  types.ts
app/src/components/: HomeScreen.tsx  TestsScreen.tsx  TitleBar.tsx  windows.tsx
app/src/components/bookmarks/: BookmarksScreen.tsx
app/src/components/db/: MainScreen.tsx
app/src/utils/: bookmarks.ts  index.ts  processes.ts
common/: Cargo.toml  tsconfig.json
common/src/: lib.rs  requests.ts  styles.css
common/src/components/: DictionaryInput.tsx  Image.tsx  Links.tsx  MediaView.tsx  MultiSelect.tsx  Paginator.tsx  Select.tsx  Spinner.tsx  command.tsx  dialog.tsx  fallbacks.tsx  hover-card.tsx  layouts.tsx  popover.tsx  toast.tsx  toggles.tsx
common/src/components/tags/: TagMultiSelect.tsx
common/src/constants/: index.ts  mod.rs
common/src/controllers/: bookmarks.ts  db.rs  mod.rs  tags.ts
common/src/types/: bookmarks.ts  errors.rs  index.ts  mod.rs  tags.ts
common/src/types/db/: index.ts  mod.rs
common/src/utils/: bookmarks.ts  db.ts  files.ts  http.ts  index.ts  lists.ts  mod.rs  tags.ts  urls.ts
data/: .gitignore  user_agents.json
docs/: yt-dlp.md
extension/: manifest.json  package.json  postcss.config.cjs  tailwind.config.ts  tsconfig.json  vite.config.ts
extension/src/: main.tsx  styles.css  utils.ts
extension/src/components/: Container.tsx
