[package]
name = "api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
common = { path = "../common" }
serde_json = { workspace = true }
serde = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
bson = { workspace = true }
mongodb = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
tower-http = { workspace = true }
